# ToolRegistry

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  README_en.md  README_zh.md  mkdocs.yml  pyproject.toml  requirements.txt  test_normalize.py
.github/workflows/: ci.yml  notify-downstream.yml  release.yml  rosetta-compat.yml
docs/: .docignore  .readthedocs.yaml  Makefile  README_en.md  README_zh.md  admin-panel.md  changelog.md  ecosystem.md  host_docs.sh  index.md  migration.md  regenerate_api_template.sh  requirements.txt
docs/admin/: configuration.md  examples.md  execution-logging.md  index.md  rest-api.md  security.md  web-ui.md
docs/api/: core.md  events.md  helpers.md  index.md  integrations.md  modules.md  permissions.md  types.md  wrappers.md
docs/architecture/: overview.md
docs/examples/: concurrent_raw_results.txt  consecutive_tool_calls.md  hub_calculator.md  hub_file_edit.md  hub_websearch.md  index.md  langchain_arxiv.md  mcp_calculator.md  mcp_diverse_transport.md  openapi_calculator.md
docs/source/: advanced_usage.md  best_practices.md  concurrency_modes.md  conf.py  examples.md  hub.md  index.md  installation.md  langchain.md  mcp.md  openai.md  openapi.md  usage.md
docs/stylesheets/: toolregistry.css
docs/usage/: basics.md  best_practices.md  concurrency_modes.md  configuration.md  function_calling.md  installation.md  message_building.md  namespace.md  permissions.md  programmatic_tool_calling.md  result_management.md  think_augmented.md  tool_discovery.md  tool_search.md
example/: cicada_tool_usage_example.py  openai_tool_usage_example.py
examples/: admin_demo.py  cicada_tool_usage_example.py  openai_tool_usage_example.py  openai_toolregistry_math.py  openai_toolregistry_mcp_math.py  openai_toolregistry_mixed_math.py  openai_toolregistry_openapi_math.py  test_file_ops.py  test_filesystem.py  test_mcp_tools.py  test_merge_spinoff.py  test_normalize.py  test_toolregistry_concurrency.py  test_toolregistry_concurrency_async.py  tools.py  tools_math_async.py  tools_mcp_math.py
examples/hub_related/: cicada_calculator_example.py  cicada_calculator_fileops_example.py  cicada_file_edit_example.py  cicada_websearch_example.py  cicada_websearch_searxng_example.py  concurrent_average_results.txt  concurrent_raw_results.txt  openai_calculator_example.py  openai_calculator_example_chat_api.py  openai_calculator_example_response_api.py  openai_calculator_fileops_example.py  openai_websearch_example.py  qwen3_assessment_calculator.md  sample.txt  test_calculator.py  test_class_integration.py  test_file_ops.py  test_filesystem.py  test_hub_integration.py  test_unit_converter.py
examples/langchain_related/: openai_langchain_arxiv_example.py
examples/mcp_related/: README_en.md  README_zh.md  cicada_mcp_calculator_example.py  mcp_from_diverse_transport.py  openai_mcp_calculator_example.py
examples/mcp_servers/: echo_server_sse.py  everything_server_sse.py  math_server.py  math_server_sse.py  sqlite_server_sse.py  str_ops_server.py  str_ops_server_sse.py
examples/openapi_related/: cicada_openapi_calculator_example.py  openai_openapi_calculator_example.py  test.py  test_openapi_calculator.py  test_openapi_openai.py  xquik_openapi_example.py
examples/providers/: openai_chat_completions.py  openai_responses.py
examples/tool_use_examples/: cicada_tool_usage_example.py  openai_tool_usage_example.py  openai_toolregistry_math.py  openai_toolregistry_mcp_math.py  openai_toolregistry_mixed_math.py  openai_toolregistry_openapi_math.py  test_toolregistry_concurrency.py  test_toolregistry_concurrency_async.py  test_toolregistry_mcp.py  tools_examples.py  tools_math.py  tools_math_async.py
reference/: README.md  adr-001-llm-subpackage.md  adr-002-rosetta-delegation.md  adr-003-result-ordering.md  architecture.md
scripts/: admin_screenshots.py
src/toolregistry/: __init__.py  _admin.py  _async_runtime.py  _callbacks.py  _enable_disable.py  _logging.py  _namespace.py  _permissions.py  _registration.py  _rosetta.py  _sparse_search.py  class_tool_integration.py  events.py  executor.py  hub_integration.py  mcp_integration.py  openapi_integration.py  parameter_models.py  static_method_integration.py  tool.py  tool_discovery.py  tool_registry.py  tool_search.py  tool_wrapper.py  types.py  types.py.backup  utils.py
tests/: _mcp_test_server.py  conftest.py  test_admin_server.py  test_aexecute_tool_calls.py  test_ainvoke.py  test_anthropic_gemini_formats.py  test_async_runtime.py  test_code_execution.py  test_config.py  test_constructor_error.py  test_content_blocks.py  test_deprecation_shims.py  test_enable_disable.py  test_events.py  test_execution_log.py  test_integration.py  test_invoke.py  test_langchain_integration.py  test_mcp_client.py  test_mcp_post_processing.py  test_openapi_integration.py  test_param_warnings.py  test_parameter_models.py  test_permission_handler.py  test_permission_policy.py  test_persistent_connection.py  test_pickle_wrappers.py  test_post_register_hook.py  test_ptc_invocation_id.py  test_ptc_tool.py  test_runtimes_bash.py  test_runtimes_protocol.py  test_schema_sanitization.py  test_tool.py  test_tool_discovery.py  test_tool_metadata.py  test_tool_namespace.py  test_tool_registry.py  test_tool_search.py  test_tool_source.py  (+5 more)
tests/test_executor/: test_handle_result_async.py  test_helpers.py  test_inline_backend.py  test_integration.py  test_process_backend.py  (+2 more)
(+218 files in other folders)
