[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolregistry"
version = "0.2.0"
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "A library for managing tool registries"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pydantic>=1.5.1"]

[project.urls]
Homepage = "https://github.com/Oaklight/ToolRegistry"

[tool.setuptools.packages.find]
where = ["src"]
